<resources>
    <string name="app_name">Easy Diary</string>
    <string name="common_create_seconds">Creation Seconds</string>
    <string name="create_diary_title">Write Diary</string>
    <string name="write_date">Date</string>
    <string name="request_title_message">Please enter a title.</string>
    <string name="request_content_message">Please enter your content.</string>
    <string name="guide_message">Type or speak the title.</string>
    <string name="contents_text_hint">Type or speak the contents.</string>
    <string name="delete_photo_confirm_message">Are you sure you want to delete this photo?</string>
    <string name="gallery_intent_not_found_message">The Gallery app is not installed or is disabled.</string>
    <string name="create_diary_showcase_button_1">Next</string>
    <string name="create_diary_showcase_button_2">Close</string>
    <string name="create_diary_showcase_title_1">Weather</string>
    <string name="create_diary_showcase_title_2">Title</string>
    <string name="create_diary_showcase_title_3">Contents</string>
    <string name="create_diary_showcase_title_4">Attach photo</string>
    <string name="create_diary_showcase_title_5">Scale up font</string>
    <string name="create_diary_showcase_title_6">Scale down font</string>
    <string name="create_diary_showcase_title_7">Pick date</string>
    <string name="create_diary_showcase_title_8">Pick time</string>
    <string name="create_diary_showcase_title_9">Save</string>
    <string name="create_diary_showcase_message_1">Select the weather for the diary creation time. Weather selection is not mandatory.</string>
    <string name="create_diary_showcase_message_2">Type the title of the diary. Entering a subject is not mandatory.</string>
    <string name="create_diary_showcase_message_3">Enter diaries, notes, summary notes, and more.</string>
    <string name="create_diary_showcase_message_4">Attach a photo to the diary.</string>
    <string name="create_diary_showcase_message_5">Enlarge the text used in the diary.</string>
    <string name="create_diary_showcase_message_6">Reduce the font used in the diary.</string>
    <string name="create_diary_showcase_message_7">Select the diary creation date. To create a diary for a past date, change the date.</string>
    <string name="create_diary_showcase_message_8">Select the diary creation time. To create a diary for a different time, change the time.</string>
    <string name="create_diary_showcase_message_9">Save the completed diary.</string>
    <string name="read_diary_title">Search</string>
    <string name="input_mode_a">Speech mode</string>
    <string name="input_mode_c">Keypad mode</string>
    <string name="guide_message_2">Type or speak the subject.</string>
    <string name="recognizer_intent_not_found_message">The speech recognition module is not installed or is disabled.</string>
    <string name="sample_diary_title_1">Be dangerous rather than careful.</string>
    <string name="sample_diary_title_2">I repeat what I know when I speak.</string>
    <string name="sample_diary_title_3">The more bad news we hear, the more we should be happy.</string>
    <string name="sample_diary_title_4">Abundance calls comfort, constraint calls creativity.</string>
    <string name="sample_diary_1">When you look back at your past life, you will surely know that you have been damaging your life because you are too careful not to be in danger.\nDanger of danger.\nDanger rather than being careful.\n- Grant money, In the law of</string>
    <string name="sample_diary_2">When you talk, you are only repeating what you already know.\nBut if you listen, you may learn something new.\n-The Dalai Lama</string>
    <string name="sample_diary_3">It is the bad news that you need to hear most as a leader. \nThe good news is good tomorrow, but the bad news will be worse tomorrow. \nThis is because even if the facts are heartbreaking, That\'s why it\'s safe to say. \n- Eric Schmidt, President of Google, \"How does Google work?\"</string>
    <string name="sample_diary_4">Constraints are not a barrier to creativity, but creativity is used to overcome constraints. \nAll great works or creative solutions are those that have a lot of time constraints, physical constraints, and resource constraints. Creativity is born in a constrained environment. \n- Representative Kim Bong-Jin</string>
    <string name="read_diary_showcase_button_1">Next</string>
    <string name="read_diary_showcase_button_2">Close</string>
    <string name="read_diary_showcase_title_1">Write diary</string>
    <string name="read_diary_showcase_title_2">Search</string>
    <string name="read_diary_showcase_title_3">Speech recognition</string>
    <string name="read_diary_showcase_title_4">Calendar</string>
    <string name="read_diary_showcase_title_5">Timeline</string>
    <string name="read_diary_showcase_title_6">Chart</string>
    <string name="read_diary_showcase_title_7">Advanced setting</string>
    <string name="read_diary_showcase_title_8">View diary</string>
    <string name="read_diary_showcase_message_1">You can create various entries such as diaries, memos, and summaries.</string>
    <string name="read_diary_showcase_message_2">You can search for diaries using keywords. When a keyword is entered, the matching diary is searched and the keyword is highlighted.</string>
    <string name="read_diary_showcase_message_3">You can use the speech recognition feature to enter search keywords without a keypad.</string>
    <string name="read_diary_showcase_message_4">The created diary can be collected by date using the calendar.</string>
    <string name="read_diary_showcase_message_5">The created diary is provided as a timeline.</string>
    <string name="read_diary_showcase_message_6">You can view charts of diary entries for the entire period.</string>
    <string name="read_diary_showcase_message_7">You can use advanced settings to change fonts, set lock number, backup and restore diary.</string>
    <string name="read_diary_showcase_message_8">Click the diary card in the list to view the diary.</string>
    <string name="diary_photo_migration_message">The image attachment method of the EasyDiary is changed so that the existing link information is compressed and stored in the EasyDiary folder.\nPlease wait for the operation to finish.</string>
    <string name="read_diary_detail_title">Read Diary</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="read_diary_detail_showcase_button_1">Next</string>
    <string name="read_diary_detail_showcase_button_2">Close</string>
    <string name="read_diary_detail_showcase_title_0">Diary View</string>
    <string name="read_diary_detail_showcase_title_1">Move page</string>
    <string name="read_diary_detail_showcase_title_2">Edit diary</string>
    <string name="read_diary_detail_showcase_title_3">TTS</string>
    <string name="read_diary_detail_showcase_title_4">Postcard</string>
    <string name="read_diary_detail_showcase_title_5">Delete diary</string>
    <string name="read_diary_detail_showcase_message_0">Browse saved diaries. You can edit a diary or create a diary card with a custom color.</string>
    <string name="read_diary_detail_showcase_message_1">Drag the screen left or right to view diaries created before or after.</string>
    <string name="read_diary_detail_showcase_message_2">You can go to the diary editing screen to edit the diary being viewed.</string>
    <string name="read_diary_detail_showcase_message_3">You can listen to the diary text by voice using the Google TTS feature.</string>
    <string name="rate_app">Rate App</string>
    <string name="restore_diary">Recover diary</string>
    <string name="restore_diary_summary">Recover all content except attachments using data backed up to Google Drive.</string>
    <string name="restore_photo">Recover diary photos (Manual)</string>
    <string name="restore_photo_summary">Users directly recover photos attached to the diary.</string>
    <string name="backup_diary">Backup diary</string>
    <string name="backup_diary_summary">Back up all content except attachments to Google Drive.</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_chart">Statistics</string>
    <string name="menu_timeline">Timeline</string>
    <string name="post_card">Diary Postcard</string>
    <string name="preferences_category_information">Application Information</string>
    <string name="preferences_information_licenses">Open Source Licenses</string>
    <string name="preferences_information_licenses_summary">Open source software notices</string>
    <string name="invite_friends">Invite friends</string>
    <string name="speech_to_text">Voice input</string>
    <string name="release_notes_title">Release Notes</string>
    <string name="release_notes_summary">Check for new features by release version.</string>
    <string name="backup_attach_photo_title">Backup attached photos</string>
    <string name="backup_attach_photo_summary">Backup your attached photos to Google Drive. This feature may not work on some devices due to beta status.</string>
    <string name="recover_attach_photo_title">Recover attached photos</string>
    <string name="recover_attach_photo_summary">Recover attached photos backed up to Google Drive. This feature may not work on some devices due to beta status.</string>
    <string name="export_excel_title">Export Excel</string>
    <string name="export_excel_description">Save all content except the attached photo as an Excel file.</string>
    <string name="faq_title">FAQs</string>
    <string name="faq_description">You can check frequently asked questions and answers.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_description">Easy Diary Privacy Policy.</string>
    <string name="preferences_category_backup_restore_device">Backup and Restore</string>
    <string name="export_realm_title">Backup diary</string>
    <string name="export_realm_description">Back up database files except the attached photo to the device storage.\nSince files backed up in the internal storage are deleted when the application is deleted, use the external public storage or Google Drive backup function to permanently store the created data.</string>
    <string name="import_realm_title">Recover diary</string>
    <string name="import_realm_description">Recovers database files from device storage except attachments.</string>
    <string name="send_email_attach_excel_title">Excel file creation and email sending</string>
    <string name="send_email_attach_excel_description">All content except the attached photo is created as an Excel file and attached to the email.</string>
    <string name="google_drive_account_sign_out_title">Reset Google linked account</string>
    <string name="google_drive_account_sign_out_description">Remove token information published by Easy Diary using Google linked account.</string>
    <string name="delete_realm_title">Delete backup file</string>
    <string name="delete_realm_description">Delete the backup file stored in the storage.</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="export_full_backup_title">[BETA] Backup full data</string>
    <string name="export_full_backup_description">Compress and back up all the data related to the diary such as database, attached photo, post card, font, etc. into one file.\nThis feature is a beta feature therefore may not work properly on some devices.</string>
    <string name="import_full_backup_title">[BETA] Recover full data</string>
    <string name="import_full_backup_description">Decompress and recover all the data related to the diary such as database, attached photo, post card, font, etc.\nThis feature is a beta feature therefore may not work properly on some devices.</string>
    <string name="settings">Settings</string>
</resources>