<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/planner"
        android:id="@+id/planner"
        android:orderInCategory="100"
        android:title="@string/menu_calendar"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/settings_11"
        android:id="@+id/timeline"
        android:orderInCategory="100"
        android:title="@string/menu_timeline"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/microphone"
        android:id="@+id/microphone"
        android:orderInCategory="100"
        android:title="@string/speech_to_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/postCard"
        android:orderInCategory="100"
        android:title="@string/post_card"
        app:showAsAction="never" />
    <item
        android:id="@+id/dashboard"
        android:orderInCategory="100"
        android:title="@string/menu_dashboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/chart"
        android:orderInCategory="100"
        android:title="@string/menu_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
