<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/card_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/exportRealmFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_realm_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_realm_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/importRealmFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_realm_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_realm_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/deleteRealmFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/delete_realm_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/delete_realm_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exportExcel"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_excel_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_excel_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sendEmailWithExcel"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/send_email_attach_excel_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/send_email_attach_excel_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exportFullBackupFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_full_backup_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_full_backup_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/importFullBackupFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_full_backup_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_full_backup_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

