<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <io.github.aafactory.commons.views.LabelLayout
        android:background="@drawable/bg_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/preferences_category_backup_restore_device"
            style="@style/SettingsCategory" />
    </io.github.aafactory.commons.views.LabelLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/card_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/exportRealmFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_realm_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_realm_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/importRealmFile"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_realm_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/import_realm_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/restorePhotoSetting"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/restore_photo"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/restore_photo_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exportExcel"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_excel_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/export_excel_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>

