<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--<io.github.aafactory.commons.views.LabelLayout
        android:background="@drawable/bg_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/preferences_category_backup_restore"
            style="@style/SettingsCategory" />
    </io.github.aafactory.commons.views.LabelLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/card_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/signOutGoogleOAuth"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/google_drive_account_sign_out_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/google_drive_account_sign_out_description"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/backupSetting"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/backup_diary"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/backup_diary_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/restoreSetting"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/restore_diary"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/restore_diary_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/backupAttachPhoto"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/backup_attach_photo_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/backup_attach_photo_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recoverAttachPhoto"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/recover_attach_photo_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/recover_attach_photo_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

