<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/card_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/rateAppSetting"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/rate_app"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/rateAppSettingSummary"
                    android:text=""
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/invite"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    style="@style/SettingsTitle"
                    android:text="@string/invite_friends" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:id="@+id/inviteSummary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/faq"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    style="@style/SettingsTitle"
                    android:text="@string/faq_title" />
                <com.simplemobiletools.commons.views.MyTextView
                    style="@style/SettingsSummary"
                    android:text="@string/faq_description" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/privacyPolicy"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    style="@style/SettingsTitle"
                    android:text="@string/privacy_policy_title" />
                <com.simplemobiletools.commons.views.MyTextView
                    style="@style/SettingsSummary"
                    android:text="@string/privacy_policy_description" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/releaseNotes"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/release_notes_title"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/release_notes_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/licenseView"
            android:orientation="vertical"
            style="@style/AppCard.Settings">
            <LinearLayout
                style="@style/LinearLayoutVertical">
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/preferences_information_licenses"
                    style="@style/SettingsTitle" />
                <com.simplemobiletools.commons.views.MyTextView
                    android:text="@string/preferences_information_licenses_summary"
                    style="@style/SettingsSummary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

